--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <button onclick="window.open('https://docs.google.com/document/d/1UV5Kmhna_q2V68GrGecB5LdJSRhDmfGq6vuBZ81m0no/edit?usp=sharing','_blank')" type="button" class="btn">CURRENT SPLIT</button>
         </div>
         <div class="btnlist">
+            <button onclick="window.open('https://www.amway.com/myshop/gude','_blank')" type="button" class="btn">MY SHOP</button>
+        </div>
+        <div class="btnlist">
             <button onclick="window.open('https://www.instagram.com/liftingwithgude/','_blank')" type="button" class="btn">INSTAGRAM</button>
         </div>
         <div class="btnlist">
