made some changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <div>
         <div class="btnlist">
-            <button onclick="window.open('https://titan.clothing/?rfsn=5580343.d06683','_blank')" type="button" class="btn shake">15% OFF TITAN CLOTHING</button>
+            <button onclick="window.open('https://titan.clothing/?rfsn=5580343.d06683','_blank')" type="button" class="btn">15% OFF TITAN CLOTHING</button>
         </div>
         <div class="btnlist">
             <button onclick="window.open('https://open.spotify.com/playlist/2FnwR2QJSOPIZbOleAfYzn?si=6ce3d91d5d064b4b','_blank')" type="button" class="btn">GYM PLAYLIST</button>
@@ -49,17 +49,21 @@
         <div class="btnlist">
             <button onclick="window.open('https://www.amway.com/myshop/gude','_blank')" type="button" class="btn">MY SHOP</button>
         </div>
-        <div class="btnlist">
-            <button onclick="window.open('https://www.instagram.com/liftingwithgude/','_blank')" type="button" class="btn">INSTAGRAM</button>
-        </div>
-        <div class="btnlist">
-            <button onclick="window.open('https://www.tiktok.com/@jgude19','_blank')" type="button" class="btn">TIKTOK</button>
-        </div>
-        <div class="btnlist">
-            <button onclick="window.open('https://www.paypal.me/jakegude?locale.x=en_US','_blank')" type="button" class="btn">PAYPAL</button>
-        </div>
     </div>
 
 </body>
+<footer>
+    <div class="containter">
+        <div class="row">
+            <div class="footer-col">
+                <!-- <h4 class="footer">Social Links</h4> -->
+                <a class="footer" href="https://www.instagram.com/liftingwithgude/">INSTAGRAM</a>
+                <a class="footer" href="https://www.tiktok.com/@jgude19">TIKTOK<a>
+                <a class="footer" href="https://www.paypal.me/jakegude?locale.x=en_US">PAYPAL</a>
+                <a class="footer" href="#">CASHAPP</a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </html> 
