started implementing email service

--- a/index.html
+++ b/index.html
@@ -51,16 +51,29 @@
         </div>
     </div>
 
+    <!-- <div class="contactlist">
+        <form onsubmit="sendEmail(); reset(); return;">
+            <h3>GET IN TOUCH WITH ME</h3>
+            <input class="contact" type="text" id="contact-name" placeholder="Name" required>
+            <input class="contact" type="email" id="contact-email" placeholder="Email" required>
+            <input class="contact" type="number" id="contact-number" placeholder="Phone Number">
+            <input class="contact" type="text" id="contact-subject" placeholder="Subject" required>
+            <input class="contact" type="text" id="contact-message" placeholder="Message" required>
+            <input class="contact btn" type="submit" value="Submit">
+        </form>
+    </div>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="./myjs.js"></script> -->
 </body>
 <footer>
     <div class="containter">
         <div class="row">
             <div class="footer-col">
                 <!-- <h4 class="footer">Social Links</h4> -->
-                <a class="footer" href="https://www.instagram.com/liftingwithgude/">INSTAGRAM</a>
-                <a class="footer" href="https://www.tiktok.com/@jgude19">TIKTOK<a>
-                <a class="footer" href="https://www.paypal.me/jakegude?locale.x=en_US">PAYPAL</a>
-                <a class="footer" href="#">CASHAPP</a>
+                <a class="footer" target="_blank" href="https://www.instagram.com/liftingwithgude/">INSTAGRAM</a>
+                <a class="footer" target="_blank" href="https://www.tiktok.com/@jgude19">TIKTOK<a>
+                <a class="footer" target="_blank" href="https://www.paypal.me/jakegude?locale.x=en_US">PAYPAL</a>
+                <a class="footer" target="_blank" href="cash.app/$jakegude">CASHAPP</a>
             </div>
         </div>
     </div>
