took out bio and changed pics

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="page-type" content="Blogging">
     <meta name="audience" content="Everyone">
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image" href="./images/gymPFP_squ_transparent.png">
+    <link rel="icon" type="image" href="./images/newgymPFP_squ_transparent.png">
 </head>
 
 <body>
@@ -29,10 +29,10 @@
             </ul>
         </nav> -->
         <div>
-            <img src="./images/gymPFP_squ.JPG" class="pfp backdrop">
+            <img src="./images/newgymPFP_squ.jpg" class="pfp backdrop">
             <h1 class="name">Jake Gudenkauf</h1>
-            <h4 class="bio">I love lifting and I am trying to help others as they are starting their journey.</h4>
-            <h4 class="bio">Thank you for joining mine!</h4>
+            <!-- <h4 class="bio">I love lifting and I am trying to help others as they are starting their journey.</h4>
+            <h4 class="bio">Thank you for joining mine!</h4> -->
         </div>
     </header>
     
